0.004000 - 2013-11-05
  - rename 'hacks' option and module to 'builtin'
  - add dump option to include contents of references in traces.
  - add color option to colorize warnings or errors in terminal.
  - fix handling of outer __DIE__ hooks
  - prevent slowdown when loaded via -d
  - fixed Exception::Base builtin handling

0.003001 - 2013-10-07
  - fix compatibility with perl 5.6
  - fix some minor memory leaks
  - trigger overloads more carefully
  - check roles using ->does as well as ->DOES

0.003000 - 2013-10-04
  - Rename to Devel::Confess instead of having an alias
    (I am bad at naming things)
  - Ouch exceptions can now work without hacks

0.002002 - 2013-09-21
  - fix 5.8 compatibility

0.002001 - 2013-09-20
  - properly list Scalar::Util as a prereq
  - fix tests on Windows

0.002000 - 2013-09-19
  - rename module from Carp::Always::AndRefs to Carp::Always::EvenObjects
  - some documentation tweaks
  - fix using Devel::Confess under debugger

0.001000 - 2013-09-19
  - initial release